--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,11 +7,25 @@ services:
         environment:
             POSTGRES_DB: postgres
             POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: postgres
+            POSTGRES_PASSWORD: Aa123456
             PGDATA: /var/lib/postgresql/data
         volumes:
             - postgres-db-volume-ec2:/var/lib/postgresql/data
         ports:
-            - "7777:5432"
+            - "5432:5432"
+    pgadmin:
+        image: dpage/pgadmin4:latest
+        restart: always
+        environment:
+            PGADMIN_DEFAULT_EMAIL: pgadmin@pgadmin.com
+            PGADMIN_DEFAULT_PASSWORD: pgadmin
+            PGADMIN_LISTEN_PORT: 80
+        ports:
+            - "5050:80"
+        volumes:
+            - pgadmin-data:/var/lib/pgadmin
+        links:
+            - "postgres:pgsql-server"
 volumes:
     postgres-db-volume-ec2:
+    pgadmin-data:
